appointment styles started

--- a/app/views/appointments/_form.html.erb
+++ b/app/views/appointments/_form.html.erb
@@ -11,5 +11,5 @@
   <%= form.label :note_content, "Notes" %>
   <%= form.text_area :note_content %> -->
   <br/>
-  <%= form.submit "Create Appointment" %>
+  <%= form.submit "Create Appointment", class:"good-button" %>
 <% end %>
