--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Homepage of the Doctors Notes App</h1>
 <p>Find me in app/views/home/index.html.erb</p>
-<%= button_to 'To Appointments', appointments_path, method: :get %>
+<%= button_to 'To Appointments', appointments_path, method: :get, class:"good-button" %>
+<%= button_to 'View All issues', issues_path, method: :get, class:"good-button" %>
