--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,4 +1,4 @@
-<%= button_to 'Head back home', home_index_path, method: :get %>
+<%= button_to 'Head back home', home_index_path, method: :get, class:"back-button" %>
 <h1> Appointments.each here!</h1>
 <table>
   <thead>
@@ -10,11 +10,11 @@
       <tr>
         <td><%= appointment.date %></td>
         <td><%= appointment.doctor_name %></td>
-        <td><%= button_to 'Edit', edit_appointment_path(appointment), method: :get %></td>
-        <td><%= button_to 'Delete', appointment_path(appointment), method: :delete %></td>
-        <td><%= button_to 'Show', appointment_path(appointment), method: :get %></td>
+        <td><%= button_to 'Edit', edit_appointment_path(appointment), method: :get, class:"meh-button" %></td>
+        <td><%= button_to 'Delete', appointment_path(appointment), method: :delete, class:"bad-button" %></td>
+        <td><%= button_to 'Show', appointment_path(appointment), method: :get, class:"good-button" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-<%= button_to 'Create new Appointment', new_appointment_path, method: :get %>
+<%= button_to 'Create new Appointment', new_appointment_path, method: :get, class:"good-button" %>
