--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -2,4 +2,4 @@
 <br/>
 <%= render 'form', appointment: @appointment %>
 <br/>
-<%= button_to 'Back to Appointments', appointments_path, method: :get %>
+<%= button_to 'Back to Appointments', appointments_path, method: :get, class:"back-button" %>
