--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,12 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
-    <%= render "layouts/header" %>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <div style="background-color: #d9f0ff; background-image: url('https://www.transparenttextures.com/patterns/project-paper.png'); padding:10px " >
+    <div class="header-container">
+      <%= render "layouts/header" %>
+    </div>
+    <div class="app-container">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
   </body>
